Build a Fraction: Go back to page with levels 1-5 on "reset all"
Build a Fraction: Fixed: "Next" button in a numbers level goes to a shapes level
# 1.00.26 (66795) Aug 10, 2012
Build a Fraction: Shapes: Make container non-draggable while piece is animating into it, otherwise the piece will end up in the wrong location.
Build a Fraction: Shapes: Made the toolbox a bit higher vertically to accommodate large stacks
Build a Fraction: Shapes: Centered the toolbox horizontally in the play area when using circle slices
Build a Fraction: Shapes: Removed gray as a color and improved colors for higher levels
Build a Fraction: Moved left/right level selection page buttons to the bottom and added dots for indicator of current page
# 1.00.25 (66789) Aug 9, 2012
Build a Fraction: Shapes: Prevent pieces from being dropped into a container in a collection box
Build a Fraction: Shapes: Keep resampling levels until they match our constraints, such as not having too many stacks or too many cards.
Build a Fraction: Shapes: Fixed: When the user presses a "-" button to remove a container from a group, any pieces in the container should go back to the toolbox
Build a Fraction: Shapes: When a container is added to a container node, animate it to the left if it overlaps the scoring boxes.
# 1.00.24 (66784) Aug 9, 2012
Build a Fraction: Shapes: Decreased spacing between pies in the toolbox
# 1.00.23 (66782) Aug 9, 2012
Intro: Improved beaker offsets when dragging out of play area containers (again)
Build a Fraction: Shapes: Randomly use pies or bars instead of preferring one for large denominators
Build a Fraction: Shapes: Removed extra 1/2 pieces from level 4 when building halves
Build a Fraction: Shapes: Made internal divisions (dotted lines) go back to 1 when going into toolbox
Build a Fraction: Shapes: For levels 8-10, made number of containers go back to 1 when going into toolbox
Build a Fraction: Shapes: Made it so the dotted lines don't get in the way of mouse events