@@ -8,21 +8,18 @@ import java.awt.Color;
 import java.awt.geom.RoundRectangle2D;
 
 import edu.colorado.phet.common.phetcommon.math.vector.Vector2D;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterSet;
 import edu.colorado.phet.common.phetcommon.view.Dimension2DDouble;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
-import edu.colorado.phet.common.piccolophet.nodes.toolbox.CanvasBoundedDragHandler;
 import edu.colorado.phet.common.piccolophet.nodes.toolbox.DragEvent;
+import edu.colorado.phet.common.piccolophet.nodes.toolbox.SimSharingCanvasBoundedDragHandler;
 import edu.colorado.phet.fractions.buildafraction.view.Stackable;
 import edu.umd.cs.piccolo.activities.PTransformActivity;
 import edu.umd.cs.piccolo.event.PInputEvent;
 
-import static edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager.sendUserMessage;
 import static edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterKeys.value;
-import static edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterSet.parameterSet;
-import static edu.colorado.phet.common.phetcommon.simsharing.messages.UserActions.*;
 import static edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentChain.chain;
-import static edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentTypes.sprite;
 import static edu.colorado.phet.fractions.fractionsintro.FractionsIntroSimSharing.Components.numberCard;
 
 /**
@@ -44,21 +41,18 @@ public class NumberCardNode extends Stackable {
         }};
         addChild( numberNode );
 
-        addInputEventListener( new CanvasBoundedDragHandler( NumberCardNode.this ) {
-            @Override public void mousePressed( final PInputEvent event ) {
-                sendUserMessage( chain( numberCard, NumberCardNode.this.hashCode() ), sprite, pressed, parameterSet( value, number ) );
-                super.mousePressed( event );
+        addInputEventListener( new SimSharingCanvasBoundedDragHandler( chain( numberCard, NumberCardNode.this.hashCode() ), NumberCardNode.this ) {
+            @Override protected ParameterSet getParametersForAllEvents( final PInputEvent event ) {
+                return super.getParametersForAllEvents( event ).with( value, number );
             }
 
             @Override protected void dragNode( final DragEvent event ) {
-                sendUserMessage( chain( numberCard, NumberCardNode.this.hashCode() ), sprite, drag, parameterSet( value, number ) );
                 moveToFront();
                 setPositionInStack( Option.<Integer>none() );
                 translate( event.delta.width, event.delta.height );
             }
 
             @Override public void mouseReleased( final PInputEvent event ) {
-                sendUserMessage( chain( numberCard, NumberCardNode.this.hashCode() ), sprite, released, parameterSet( value, number ) );
                 super.mouseReleased( event );
                 context.endDrag( NumberCardNode.this );
             }
