@@ -8,10 +8,11 @@ import java.awt.BasicStroke;
 import java.awt.geom.AffineTransform;
 
 import edu.colorado.phet.common.phetcommon.math.vector.Vector2D;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterSet;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
-import edu.colorado.phet.common.piccolophet.nodes.toolbox.CanvasBoundedDragHandler;
 import edu.colorado.phet.common.piccolophet.nodes.toolbox.DragEvent;
+import edu.colorado.phet.common.piccolophet.nodes.toolbox.SimSharingCanvasBoundedDragHandler;
 import edu.colorado.phet.fractions.buildafraction.view.Stackable;
 import edu.colorado.phet.fractions.common.math.Fraction;
 import edu.umd.cs.piccolo.activities.PActivity;
@@ -19,11 +20,7 @@ import edu.umd.cs.piccolo.activities.PActivity.PActivityDelegate;
 import edu.umd.cs.piccolo.activities.PTransformActivity;
 import edu.umd.cs.piccolo.event.PInputEvent;
 
-import static edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager.sendUserMessage;
-import static edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterSet.parameterSet;
-import static edu.colorado.phet.common.phetcommon.simsharing.messages.UserActions.*;
 import static edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentChain.chain;
-import static edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentTypes.sprite;
 import static edu.colorado.phet.fractions.fractionsintro.FractionsIntroSimSharing.Components.piece;
 import static edu.colorado.phet.fractions.fractionsintro.FractionsIntroSimSharing.ParameterKeys.denominator;
 import static java.awt.geom.AffineTransform.getTranslateInstance;
@@ -50,9 +47,12 @@ public abstract class PieceNode extends Stackable {
     void installInputListeners() {
         addInputEventListener( new CursorHandler() );
 
-        addInputEventListener( new CanvasBoundedDragHandler( PieceNode.this ) {
+        addInputEventListener( new SimSharingCanvasBoundedDragHandler( chain( piece, PieceNode.this.hashCode() ), PieceNode.this ) {
+            @Override protected ParameterSet getParametersForAllEvents( final PInputEvent event ) {
+                return super.getParametersForAllEvents( event ).with( denominator, pieceSize );
+            }
+
             @Override public void mousePressed( final PInputEvent event ) {
-                sendUserMessage( chain( piece, PieceNode.this.hashCode() ), sprite, pressed, parameterSet( denominator, pieceSize ) );
                 super.mousePressed( event );
 
                 dragStarted();
@@ -76,7 +76,6 @@ public abstract class PieceNode extends Stackable {
             }
 
             @Override protected void dragNode( final DragEvent event ) {
-                sendUserMessage( chain( piece, PieceNode.this.hashCode() ), sprite, drag, parameterSet( denominator, pieceSize ) );
                 Option<Double> originalAngle = context.getNextAngle( PieceNode.this );
                 translate( event.delta.width, event.delta.height );
                 Option<Double> newAngle = context.getNextAngle( PieceNode.this );
@@ -86,7 +85,6 @@ public abstract class PieceNode extends Stackable {
             }
 
             @Override public void mouseReleased( final PInputEvent event ) {
-                sendUserMessage( chain( piece, PieceNode.this.hashCode() ), sprite, released, parameterSet( denominator, pieceSize ) );
                 super.mouseReleased( event );
                 context.endDrag( PieceNode.this );
 
